--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=KutuphaneOtomasyon
+security.jwt.secret-key=dGVzdGthcnRlY2hhcmxpYmlyZXRlc3RzZWNyZXQ= 
+security.jwt.expiration-time=86400000
