spring security commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
 spring.application.name=KutuphaneOtomasyon
 security.jwt.secret-key=dGVzdGthcnRlY2hhcmxpYmlyZXRlc3RzZWNyZXQ= 
 security.jwt.expiration-time=86400000
+spring.datasource.url=jdbc:postgresql://localhost:5432/kutuphane_otomasyon
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Mail ayarlar?
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sumeyyeberfinkorkmaz@gmail.com
+spring.mail.password=qievqyymacluesai
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
