--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=KutuphaneOtomasyon
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/Booksy
+spring.datasource.username=postgres
+spring.datasource.password=tuhana123
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 security.jwt.secret-key=dGVzdGthcnRlY2hhcmxpYmlyZXRlc3RzZWNyZXQ= 
 security.jwt.expiration-time=86400000
 spring.datasource.url=jdbc:postgresql://localhost:5432/kutuphane_otomasyon
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=tuhana123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
