--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 spring.application.name=KutuphaneOtomasyon
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/Booksy
-spring.datasource.username=postgres
-spring.datasource.password=tuhana123
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 security.jwt.secret-key=dGVzdGthcnRlY2hhcmxpYmlyZXRlc3RzZWNyZXQ= 
 security.jwt.expiration-time=86400000
 spring.datasource.url=jdbc:postgresql://localhost:5432/kutuphane_otomasyon
@@ -25,3 +19,5 @@ spring.mail.password=qievqyymacluesai
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+logging.level.org.springframework.security=DEBUG
