--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=KutuphaneOtomasyon
 
-security.jwt.secret-key=YmVyZmluX3Rlc3RfbGlicmFyeV9hdXRvX2F1dGhfc2VjcmV0X2tleQ==
+
+security.jwt.secret-key=dGVzdGthcnRlY2hhcmxpYmlyZXRlc3RzZWNyZXQ= 
 security.jwt.expiration-time=86400000
 spring.datasource.url=jdbc:postgresql://localhost:5432/kutuphane_otomasyon
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=tuhana123
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
